--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: rgb(18, 18, 19);
+    background-color: darkslategray;
     color: rgb(245, 66, 66);
 }
 
@@ -144,6 +144,7 @@ body {
     width: 350px;
     cursor: pointer;
     transition: all 0.3s ease;
+    color: blue;
 }
 
 .input-button:hover {
@@ -174,17 +175,18 @@ body {
 }
 
 .keyboard-row button {
-    border: 0;
-    outline: 0;
-    background-color: rgb(129, 131, 132);
-    border-radius: 5px;
+    border: 20px;
+    outline: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px; 
     color: #fff;
     font-size: 18px;
-    padding: 10px 15px;
+    padding: 10px 15px; 
     margin: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
+
 
 .keyboard-row button:hover {
     background-color: rgb(110, 110, 110);
@@ -212,4 +214,77 @@ body {
     100% {
         transform: scale(1);
     }
+}
+
+
+
+body, .modal{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.modal{
+	top: 300px;
+    height: 600px;
+	left: 300px;
+	background: rgba(0,0,0,0.5);
+	transition: all 500ms ease;
+	opacity: 0;
+	visibility: hidden;
+}
+#btn-modal:checked ~ .modal{
+	opacity: 1;
+	visibility: visible;
+} 
+.contenedor{
+	width: 1000px;
+	height: 700px;
+	margin: auto;
+	background: #fff;
+	box-shadow: 1px 7px 25px rgba(0,0,0,0.6);
+	transition: all 500ms ease;
+	position: relative;
+	transform: translateY(-30%);
+}
+#btn-modal:checked ~ .modal .contenedor{
+	transform: translateY(0%);
+} 
+.contenedor header{
+	padding: 10px;
+	background: #db8046;
+	color: #fff;
+}
+.contenedor label{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #fff;
+	font-size: 15px;
+	cursor: pointer;
+}
+.contenido{
+	width: 200%;
+	padding: 10px; 
+}
+.contenido h3{
+	margin-bottom: 10px;
+}
+.contenido p{
+	margin-bottom: 7px;
+}
+#btn-modal{
+	display: none;
+}
+.lbl-modal{
+	background: #fff;
+	padding: 10px 15px;
+	border-radius: 4px;
+	cursor: pointer;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+	.contenedor{
+		width: 95%;
+	}
 }
